--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
