--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.1",
+    "socket.io-express-session": "^0.1.3"
   }
 }
