--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express-session": "^1.18.0",
+    "font-awesome": "^4.7.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
