--- a/JobPortal/back-end/package.json
+++ b/JobPortal/back-end/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.8.0",
     "socket.io-express-session": "^0.1.3"
   }
 }
