--- a/JobPortal/back-end/package.json
+++ b/JobPortal/back-end/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "your-app-name",
+  "version": "1.0.0",
+  "main": "server.js",
   "dependencies": {
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.8.0",
