--- a/JobPortal/back-end/package.json
+++ b/JobPortal/back-end/package.json
@@ -4,6 +4,7 @@
   "main": "server.js",
   "dependencies": {
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
     "socket.io": "^4.8.0",
     "socket.io-express-session": "^0.1.3"
   }
