--- a/JobPortal/back-end/package.json
+++ b/JobPortal/back-end/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "socket.io": "^4.8.0",
