--- a/JobPortal/back-end/package.json
+++ b/JobPortal/back-end/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
+    "aws-sdk": "^2.1691.0",
     "cors": "^2.8.5",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.15",
     "socket.io": "^4.8.0",
     "socket.io-express-session": "^0.1.3"
