--- a/JobPortal/back-end/package.json
+++ b/JobPortal/back-end/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.670.0",
     "aws-sdk": "^2.1691.0",
     "cors": "^2.8.5",
     "multer": "^1.4.5-lts.1",
