--- a/JobPortal/package.json
+++ b/JobPortal/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "pg": "^8.12.0",
+    "react-helmet": "^6.1.0",
     "socket.io": "^4.7.5"
   }
 }
