--- a/JobPortal/front-end/package.json
+++ b/JobPortal/front-end/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
