--- a/JobPortal/front-end/package.json
+++ b/JobPortal/front-end/package.json
@@ -11,6 +11,7 @@
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
