--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.6",
     "cookie-parser": "^1.4.6",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
@@ -20,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
