--- a/JobPortal/back-end/package.json
+++ b/JobPortal/back-end/package.json
@@ -6,6 +6,7 @@
     "@aws-sdk/client-s3": "^3.670.0",
     "aws-sdk": "^2.1691.0",
     "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.15",
