--- a/JobPortal/package.json
+++ b/JobPortal/package.json
@@ -15,6 +15,7 @@
     "express": "^4.19.2",
     "pg": "^8.12.0",
     "react-helmet": "^6.1.0",
+    "recharts": "^2.13.3",
     "socket.io": "^4.7.5"
   }
 }
