--- a/JobPortal/front-end/package.json
+++ b/JobPortal/front-end/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.1",
+    "recharts": "^2.13.3",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
