--- a/JobPortal/front-end/package.json
+++ b/JobPortal/front-end/package.json
@@ -13,6 +13,7 @@
     "font-awesome": "^4.7.0",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "rc-slider": "^11.1.7",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-chartjs-2": "^5.2.0",
