--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
+    "rc-slider": "^11.1.7",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
