--- a/JobPortal/package.json
+++ b/JobPortal/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "express": "^4.19.2",
     "pg": "^8.12.0",
     "react-helmet": "^6.1.0",
