--- a/JobPortal/front-end/package.json
+++ b/JobPortal/front-end/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "jspdf": "^2.5.2",
